--- a/Swift App/Base.lproj/Main.storyboard
+++ b/Swift App/Base.lproj/Main.storyboard
@@ -21,40 +21,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="This is a test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29Y-es-8uf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29Y-es-8uf">
                                 <rect key="frame" x="139" y="116" width="97" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QaT-8T-Y4t">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QaT-8T-Y4t">
                                 <rect key="frame" x="155" y="179" width="64" height="30"/>
                                 <state key="normal" title="Press Me"/>
                                 <connections>
                                     <action selector="pressButtonPressMe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iy0-d8-gh5"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIk-U9-GWm">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIk-U9-GWm">
                                 <rect key="frame" x="138" y="235" width="98" height="30"/>
                                 <state key="normal" title="Now press me"/>
                                 <connections>
                                     <action selector="pressButtonNowPressMe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ryd-eU-YKn"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KeD-3y-MFj">
+                                <rect key="frame" x="139" y="281" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="K5q-dN-M4J"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Ng-gA-fgR">
+                                <rect key="frame" x="139" y="333" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="Mls-Da-96N"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="XIk-U9-GWm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4OX-ra-2dg"/>
                             <constraint firstItem="XIk-U9-GWm" firstAttribute="centerX" secondItem="QaT-8T-Y4t" secondAttribute="centerX" id="6ON-zP-tI9"/>
+                            <constraint firstItem="0Ng-gA-fgR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DNo-p5-NAe"/>
                             <constraint firstItem="QaT-8T-Y4t" firstAttribute="top" secondItem="29Y-es-8uf" secondAttribute="bottom" constant="42" id="P9q-T7-WsW"/>
-                            <constraint firstItem="29Y-es-8uf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="VrY-6t-wKY"/>
+                            <constraint firstItem="29Y-es-8uf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="96" id="VrY-6t-wKY"/>
+                            <constraint firstItem="KeD-3y-MFj" firstAttribute="top" secondItem="XIk-U9-GWm" secondAttribute="bottom" constant="16" id="XE4-SA-RdL"/>
                             <constraint firstItem="XIk-U9-GWm" firstAttribute="top" secondItem="QaT-8T-Y4t" secondAttribute="bottom" constant="26" id="gbg-Sm-94P"/>
+                            <constraint firstItem="0Ng-gA-fgR" firstAttribute="top" secondItem="KeD-3y-MFj" secondAttribute="bottom" constant="22" id="ncZ-ZD-eQx"/>
                             <constraint firstItem="29Y-es-8uf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sKM-7h-Agp"/>
                             <constraint firstItem="QaT-8T-Y4t" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ytm-Ax-Sc6"/>
+                            <constraint firstItem="KeD-3y-MFj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zQd-4I-esF"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="testLabel" destination="29Y-es-8uf" id="lPU-sz-li7"/>
+                        <outlet property="text1" destination="KeD-3y-MFj" id="veO-mp-yrS"/>
+                        <outlet property="text2" destination="0Ng-gA-fgR" id="cDT-TQ-GBU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
